Hover and list of services added

--- a/group work/home.html
+++ b/group work/home.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <h2 class="logo">local Business Directory</h2>
+            <h2 class="logo" >local Business Directory</h2>
             <ul>
                 <li><a href="home.html" id="nav-home">Home</a></li>
                 <li><a href="GNHCanteen.html" id="nav-GNHCanteen">GNHCanteen</a></li>
@@ -25,7 +25,14 @@
             <div class="left">
                 <img src="s.jpg">
                 <h1 style="color:black">Welcome</h1>
-                <p>find information about your favourite sevices.</p>
+                <p>Find information about your favourite sevices.</p>
+                <p>Following are the list of services available in CST</p>
+                <ol style="display: inline-block; text-align: left; list-style-position: inside; padding-left: 0;">
+                <li><a href="GNHCanteen.html" id="nav-GNHCanteen">GNHCanteen</a></li>
+                <li><a href="HairSalon.html" id="nav-HairSalon">HairSalon</a></li>
+                <li><a href="GuestHouse.html" id="nav-GuestHouse">GuestHouse</a></li>
+                <li><a href="GYM.html" id="nav-GYM">GYM</a></li>
+            </ol>
             </div>
         </section>
     </main>
